--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -5,6 +5,10 @@
   <title>Basketball Team Signup</title>
  </head>
  <body>
+   <form method="POST" action="/team">
+     <p>Team Name: <input type="text" name="name"></p>
+     <p>Team Name: <input type="text" name="coach"></p>
+   </form>
  </body>
 </html>
 
