--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -5,11 +5,10 @@
   <title>Basketball Team Signup</title>
  </head>
  <body>
+   <h1>Create a Basketball Team!</h1>
    <form method="POST" action="/team">
      <p>Team Name: <input type="text" name="name"></p>
      <p>Team Name: <input type="text" name="coach"></p>
    </form>
  </body>
 </html>
-
-
